[project]
name = "the_daily_byte"
version = "0.1.0"
description = ""
authors = [
    {name = "José Luis",email = "jose.luis.rosello.ferrer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

packages = [
    { include = "the_daily_byte"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

